--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -60,6 +60,7 @@ neutrino_LDADD = \
 	$(top_builddir)/lib/libdvbsub/libdvbsub.a \
 	$(top_builddir)/lib/libtuxtxt/libtuxtxt.a \
 	$(top_builddir)/lib/libupnpclient/libtuxbox-upnpclient.a \
+	$(top_builddir)/lib/jsoncpp/libjsoncpp.a \
 	@CURL_LIBS@ \
 	@FREETYPE_LIBS@ \
 	@PNG_LIBS@ \
@@ -106,9 +107,6 @@ neutrino_LDADD += \
 	-lglut -lGL -lGLU -lGLEW -lOpenThreads -lgstinterfaces-0.10 
 endif
 
-if ENABLE_NETZKINO
-neutrino_LDADD += $(top_builddir)/lib/jsoncpp/libjsoncpp.a
-endif
 
 
 
