--- a/movieplayer/movieplayer.cfg
+++ b/movieplayer/movieplayer.cfg
@@ -1,4 +1,4 @@
 name=Movieplayer (v0.0.1)
-desc=ts/movie/file/vlc/yt/netzkino players (neu category)
+desc=ts/movie/file/vlc/yt/netzkino players
 type=4
 
