--- a/fbcallmonitor/Makefile.am
+++ b/fbcallmonitor/Makefile.am
@@ -25,11 +25,15 @@ install-exec-local:
 	install .libs/fbcallmonitor.so $(DESTDIR)$(PLUGINDIR)
 	install -m 0644 fbcallmonitor.cfg $(DESTDIR)$(PLUGINDIR)
 	install -m 0644 fritzbox.png $(DESTDIR)$(PLUGINDIR)
+	install -m 0755 fb.sh $(DESTDIR)$(PLUGINDIR)
+	install -m 0644 fb.csv $(DESTDIR)$(PLUGINDIR)
 
 uninstall-local:
 	-rm $(DESTDIR)$(PLUGINDIR)/fbcallmonitor.so
 	-rm $(DESTDIR)$(PLUGINDIR)/fbcallmonitor.cfg
 	-rm $(DESTDIR)$(PLUGINDIR)/fritzbox.png
+	-rm $(DESTDIR)$(PLUGINDIR)/fb.sh
+	-rm $(DESTDIR)$(PLUGINDIR)/fb.csv
 
 	
 
