--- a/data/icons/Makefile.am
+++ b/data/icons/Makefile.am
@@ -7,7 +7,7 @@ install_DATA = \
 	ellinika.png english.png francais.png french.png hungarian.png italiano.png norsk.png \
 	polski.png portugues.png romania.png russkij.png nederlands.png slovak.png suomi.png svenska.png \
 	blau.png gelb.png gruen.png rot.png \
-	ca.png ca2.png ca2_gray.png colors.png dbox.png dbox_small.png \
+	res_hd.png ca.png ca2.png ca2_gray.png colors.png dbox.png dbox_small.png \
 	dd.png dd_avail.png dd_gray.png \
 	down.png up.png right.png left.png \
 	error.png features.png file.png folder.png games.png \
@@ -36,24 +36,20 @@ install_DATA += \
 install_DATA += \
 	mp3.jpg mp3-0.jpg mp3-1.jpg mp3-2.jpg mp3-3.jpg mp3-4.jpg mp3-5.jpg mp3-6.jpg mp3-7.jpg
 
-
 # background
 install_DATA += \
 	radiomode.jpg scan.jpg shutdown.jpg start.jpg
-
-
 
 # mp icons
 install_DATA += \
 	mp_rew_small.png mp_play_small.png mp_pause_small.png mp_ff_small.png mp_stop_small.png \
 	mp_play.png mp_pause.png mp_rew.png mp_ff.png mp.png
 
-
 # resolution
 install_DATA += \
 	res_1920.png res_1280.png res_1440.png res_1080.png res_720.png res_704.png res_576.png \
 	res_528.png res_544.png res_480.png res_382.png res_352.png res_288.png res_000.png \
-	res_hd.png res_sd.png
+	res_hd2.png res_sd2.png
 
 
 # MenuItemsIcons
