--- a/branches/nhd2-exp/data/icons/Makefile.am
+++ b/branches/nhd2-exp/data/icons/Makefile.am
@@ -6,8 +6,8 @@ install_DATA = \
 	language.png bayrisch.png ch-baslerdeutsch.png ch-berndeutsch.png deutsch.png dutch.png bosanski.png \
 	ellinika.png english.png francais.png french.png hungarian.png italiano.png norsk.png \
 	polski.png portugues.png romania.png russkij.png nederlands.png slovak.png suomi.png svenska.png \
-	blau.png gelb.png gruen.png rot.png \
-	res_hd.png ca.png ca2.png ca2_gray.png colors.png dbox.png dbox_small.png \
+	blue.png yellow.png green.png red.png \
+	res_hd.png ca.png ca2.png ca2_gray.png colors.png setup.png setup_small.png \
 	dd.png dd_avail.png dd_gray.png \
 	down.png up.png right.png left.png \
 	error.png features.png file.png folder.png games.png \
@@ -47,7 +47,7 @@ install_DATA += \
 
 # resolution
 install_DATA += \
-	res_1920.png res_1280.png res_1440.png res_1080.png res_720.png res_704.png res_576.png \
+	res_1280.png res_1440.png res_1080.png res_720.png res_704.png res_576.png \
 	res_528.png res_544.png res_480.png res_382.png res_352.png res_288.png res_000.png \
 	res_hd2.png res_sd2.png
 
