--- a/data/icons/Makefile.am
+++ b/data/icons/Makefile.am
@@ -5,7 +5,7 @@ install_DATA = \
 	ats.png audio.png 16_9.png 16_9_gray.png \
 	language.png bayrisch.png ch-baslerdeutsch.png ch-berndeutsch.png deutsch.png dutch.png bosanski.png \
 	ellinika.png english.png francais.png french.png hungarian.png italiano.png norsk.png \
-	polski.png portugues.png romania.png russkij.png nederlands.png slovak.png suomi.png svenska.png \
+	polski.png portugues.png romania.png russkij.png nederlands.png slovak.png suomi.png svenska.png العربية.png \
 	blue.png yellow.png green.png red.png \
 	res_hd.png ca.png ca2.png ca2_gray.png colors.png setup.png setup_small.png \
 	dd.png dd_avail.png dd_gray.png \
