--- a/src/driver/Makefile.am
+++ b/src/driver/Makefile.am
@@ -56,10 +56,7 @@ libneutrino_driver_a_SOURCES = \
 	radiotext.cpp \
 	radiotools.cpp \
 	png.cpp \
-	bmp.cpp \
-	jpeg.cpp \
-	gif.cpp \
-	crw.cpp
+	jpeg.cpp
 
 if ENABLE_LCD
 libneutrino_driver_a_SOURCES += lcdd.cpp	
