--- a/branches/plugins/Makefile.am
+++ b/branches/plugins/Makefile.am
@@ -10,7 +10,8 @@ SUBDIRS = \
 	restart_enigma \
 	tuxcom \
 	vlcplayer \
-	dvdplayer
+	dvdplayer \
+	mediaplayer
 
 #SUBDIRS = vlcplayer netzkino youtube
 
