--- a/branches/nhd2-exp/src/driver/pictureviewer/Makefile.am
+++ b/branches/nhd2-exp/src/driver/pictureviewer/Makefile.am
@@ -3,8 +3,14 @@ INCLUDES = \
 	-I$(top_srcdir)/src/zapit/include/zapit \
 	-I$(top_srcdir)/lib \
 	-I$(top_srcdir)/lib/libconfigfile \
-	-I$(top_srcdir)/lib/libcoolstream \
 	@FREETYPE_CFLAGS@
+
+if BOXTYPE_COOLSTREAM
+INCLUDES += -I$(top_srcdir)/src/zapit/include \
+	-I$(top_srcdir)/lib/libcoolstream
+else
+INCLUDES += -I$(top_srcdir)/lib/libdvbapi
+endif
  
 noinst_LIBRARIES = libneutrino_pictureviewer.a
 
